--- a/360groupProject/bin/.gitignore
+++ b/360groupProject/bin/.gitignore
@@ -1,4 +1,6 @@
-/GUI_360.class
+/About$1.class
+/About$2.class
+/About.class
 /GUI_360$1.class
 /GUI_360$2.class
 /GUI_360$3.class
@@ -6,13 +8,15 @@
 /GUI_360$5.class
 /GUI_360$6.class
 /GUI_360$7.class
-/About.class
-/About$1.class
-/About$2.class
-/add_activity.class
+/GUI_360.class
+/Help$1.class
+/Help$2.class
+/Help.class
+/Node.class
 /add_activity$1.class
 /add_activity$2.class
 /add_activity$3.class
-/Help.class
-/Help$1.class
-/Help$2.class
+/add_activity.class
+/groupMain.class
+/gui/
+/node/
